unix/lang/tests/error/error_mismatched_for.yab
#expect#---Error in error_mismatched_for.yab, line 11:
#expect#---Error: 'for' and 'next' do not match
#expect#     next i
#expect#          ^
#expect#---Error: Couldn't parse program
#expect#---Error: Program not executed

for i = 1 to 5
  for j = 1 to 7
    k = k + 1
  next i
next j

